--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/cats-app",
+            "outputPath": "dist/adopt-a-cat-app",
+            "baseHref": "/adopt-a-cat-app/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
